--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.1.1
   font_awesome_flutter: ^9.0.0
+  pedantic: ^1.11.0
 
 dev_dependencies:
   flutter_test:
