--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   get: ^4.1.1
   font_awesome_flutter: ^9.0.0
   pedantic: ^1.11.0
+  persistent_bottom_nav_bar: ^4.0.2
 
 dev_dependencies:
   flutter_test:
@@ -63,12 +64,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+   - family: iranSans
+     fonts:
+        - asset: Assets/Fonts/IRANSansWeb.ttf
+        - asset: Assets/Fonts/IRANSansWeb_Bold.ttf
+          weight: 700
+        - asset: Assets/Fonts/IRANSansWeb_Medium.ttf
+          weight: 500
+        - asset: Assets/Fonts/IRANSansWeb_Light.ttf
+          weight: 200
+        - asset: Assets/Fonts/IRANSansWeb_UltraLight.ttf
+          weight: 100
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
