--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   font_awesome_flutter: ^9.0.0
   pedantic: ^1.11.0
   persistent_bottom_nav_bar: ^4.0.2
+  flutter_svg: ^0.19.3
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +52,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - Assets/Images/
+   - Assets/Icons/BottomNavigator/ActiveIcons/
+   - Assets/Icons/BottomNavigator/InActiveIcons/
+   - Assets/Icons/
+   - Assets/Icons/LoginRegister/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
