--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  get: ^4.1.1
+  get: ^4.1.4
   font_awesome_flutter: ^9.0.0
   pedantic: ^1.11.0
   persistent_bottom_nav_bar: ^4.0.2
-  flutter_svg: ^0.19.3
+  flutter_svg: ^0.21.0+1
+  dotted_border:
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +56,7 @@ flutter:
    - Assets/Icons/BottomNavigator/ActiveIcons/
    - Assets/Icons/BottomNavigator/InActiveIcons/
    - Assets/Icons/
+   - Assets/Icons/ReportPage/
    - Assets/Icons/LoginRegister/
   #   - images/a_dot_ham.jpeg
 
