--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ flutter:
    - Assets/Icons/BottomNavigator/ActiveIcons/
    - Assets/Icons/BottomNavigator/InActiveIcons/
    - Assets/Icons/
+   - Assets/Icons/PlantProfile/
    - Assets/Icons/SettingsPage/
    - Assets/Icons/SettingsPage/QAPage/
    - Assets/Icons/SettingsPage/ContactUs/
