--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   font_awesome_flutter: ^9.0.0
   pedantic: ^1.11.0
   persistent_bottom_nav_bar: ^4.0.2
-  flutter_svg: ^0.21.0+1
+  flutter_svg: ^0.22.0
   dotted_border:
 
 dev_dependencies:
@@ -56,6 +56,7 @@ flutter:
    - Assets/Icons/BottomNavigator/ActiveIcons/
    - Assets/Icons/BottomNavigator/InActiveIcons/
    - Assets/Icons/
+   - Assets/Icons/NotificationPage/
    - Assets/Icons/PlantProfile/
    - Assets/Icons/SettingsPage/
    - Assets/Icons/SettingsPage/QAPage/
