--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.1.4
-  font_awesome_flutter: ^9.0.0
+  sliding_up_panel: ^2.0.0+1
   pedantic: ^1.11.0
   persistent_bottom_nav_bar: ^4.0.2
   flutter_svg: ^0.22.0
+  introduction_screen: ^2.1.0
   dotted_border:
 
 dev_dependencies:
