--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
   get: ^4.1.4
   sliding_up_panel: ^2.0.0+1
   pedantic: ^1.11.0
@@ -36,9 +36,17 @@ dependencies:
   introduction_screen: ^2.1.0
   dotted_border:
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.0
+flutter_icons:
+  ios: true
+  android: true
+  image_path_ios: "Assets/Logo/logo_ios.png"
+  image_path_android: "Assets/Logo/logo.png"
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
